# modelviewer-mf6

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.scharlton2.json  MvProject.sln  README.md  code.json  mvmf6-release-history-1.1.0.txt
.github/workflows/: build-qt5-vtk.yml  build-vtk-9.1.0.yml  build-vtk-leaks.yml  build-vtk.yml  build.yml
Help/: AuxiliaryGraphicalObjects.htm  CellIndex.htm  CellIndexing.htm  ChangeInteractionMode.htm  ColorBar.htm  CopyToClipboard.htm  Cropping.htm  DataVisualization.htm  DisplaySize.htm  ExportAnimation.htm  ExportBitmap.htm  ExportingAndPrinting.htm  GettingStarted.htm  GridlineIndex.htm  Introduction.htm  Isosurface.htm  Joystick.htm  LoadMf6Data.htm  ModelFeatures.htm  MvMf6File.htm  Overlay.htm  PresetDirections.htm  Printing.htm  Projection.htm  ResetViewpoint.htm  SaveViewpoint.htm  ScalarData.htm  SimulationTime.htm  Solid.htm  Threshold.htm  Toolbox_Animation.htm  Toolbox_ColorBar.htm  Toolbox_Crop.htm  Toolbox_Data.htm  Toolbox_Geometry.htm  Toolbox_Grid.htm  Toolbox_Isosurface.htm  Toolbox_Lighting.htm  Toolbox_ModelFeatures.htm  Toolbox_Overlay.htm  (+11 more)
Help/not used/: AllActiveCells.htm  AxisSystem.htm  BinaryDataType.htm  DataModflow2000.htm  DataModpath.htm  LayerElevationFile.htm  LoadMf2kgwt.htm  LoadMoc3d.htm  LoadModelData.htm  LoadModflow2000.htm  LoadModflow96.htm  LoadModpath.htm  LoadMt3dms.htm  LoadPhast.htm  LoadSutra.htm  LoadUcodeSos.htm  ModelDataRequirements.htm  MovingModelData.htm  Overlay.htm  Particles.htm  Pathlines.htm  Quasi3DConfiningBed.htm  SampleEleFile.htm  SampleNodFile.htm  Terminology.htm  Toolbox_Axes.htm  Toolbox_Overlay.htm  Toolbox_Particles.htm  Toolbox_Pathlines.htm  TopElevationFile.htm
ModelViewer/: AnimationControlsPage.cpp  AnimationControlsPage.h  AnimationDlg.cpp  AnimationDlg.h  AnimationOptionsPage.cpp  AnimationOptionsPage.h  AxesDlg.cpp  AxesDlg.h  AxesPage.cpp  AxesPage.h  BackgroundPage.cpp  BackgroundPage.h  BitmapResolutionDlg.cpp  BitmapResolutionDlg.h  BoundingBoxPage.cpp  BoundingBoxPage.h  CMakeLists.txt  ColorBarColorsPage.cpp  ColorBarColorsPage.h  ColorBarDataSource.cpp  ColorBarDataSource.h  ColorBarDlg.cpp  ColorBarDlg.h  ColorBarLimitsPage.cpp  ColorBarLimitsPage.h  ColorBarPreviewListBox.cpp  ColorBarPreviewListBox.h  ColorBarSizePage.cpp  ColorBarSizePage.h  ColorBarTextPage.cpp  ColorBarTextPage.h  CropControlsPage.cpp  CropControlsPage.h  CropDlg.cpp  CropOptionsPage.cpp  CropOptionsPage.h  CropVectorsPage.cpp  CropVectorsPage.h  CustomIsosurfacePage.cpp  CustomIsosurfacePage.h  (+96 more)
ModelViewer/res/: ModelViewer.rc2
QModelViewer/: CMakeLists.txt  ModelViewer.rc  aboutdialog.cpp  aboutdialog.ui  animationdialog.cpp  animationdialog.h  animationdialog.ui  bitmapresolutiondialog.cpp  bitmapresolutiondialog.h  bitmapresolutiondialog.ui  colorbardialog.cpp  colorbardialog.h  colorbardialog.ui  cropdialog.cpp  cropdialog.h  cropdialog.ui  datadialog.cpp  datadialog.h  datadialog.ui  datafilesdialog.cpp  datafilesdialog.h  dataselectiondialog.cpp  dataselectiondialog.h  dataselectiondialog.ui  displaysizedialog.cpp  displaysizedialog.h  displaysizedialog.ui  exportanimationdialog.cpp  exportanimationdialog.h  exportanimationdialog.ui  geometrydialog.cpp  geometrydialog.h  geometrydialog.ui  griddialog.cpp  griddialog.h  griddialog.ui  isosurfacedialog.cpp  isosurfacedialog.h  isosurfacedialog.ui  lightingdialog.cpp  (+34 more)
QModelViewer/images/: ModelViewer.icns
doc/: CMakeLists.txt
examples/: CMakeLists.txt
examples/ex-gwf-csub-p04/: CMakeLists.txt  ex-gwf-csub-p04.chd  ex-gwf-csub-p04.csub  ex-gwf-csub-p04.csub.obs  ex-gwf-csub-p04.csub.obs.csv  ex-gwf-csub-p04.dis  ex-gwf-csub-p04.dis.grb  ex-gwf-csub-p04.hds  ex-gwf-csub-p04.ic  ex-gwf-csub-p04.ims  ex-gwf-csub-p04.lst  ex-gwf-csub-p04.mvmf6  ex-gwf-csub-p04.nam  ex-gwf-csub-p04.npf  ex-gwf-csub-p04.obs  ex-gwf-csub-p04.oc  ex-gwf-csub-p04.rch  ex-gwf-csub-p04.sto  ex-gwf-csub-p04.tdis  ex-gwf-csub-p04.wel  gwf_obs.csv  mfsim.lst  mfsim.nam
examples/ex-gwf-disvmesh/: CMakeLists.txt  ex-gwf-disvmesh.disv  ex-gwf-disvmesh.disv.grb  ex-gwf-disvmesh.ghb  ex-gwf-disvmesh.hds  ex-gwf-disvmesh.ic  ex-gwf-disvmesh.ims  ex-gwf-disvmesh.lst  ex-gwf-disvmesh.mvmf6  ex-gwf-disvmesh.nam  ex-gwf-disvmesh.npf  ex-gwf-disvmesh.oc  ex-gwf-disvmesh.rch  ex-gwf-disvmesh.tdis  mfsim.lst  mfsim.nam
examples/ex-gwt-moc3d-p01a/: CMakeLists.txt  ex-gwt-moc3d-p01a-conc.mvmf6  ex-gwt-moc3d-p01a-head.mvmf6
examples/ex-gwt-moc3d-p01a/mf6gwf/: CMakeLists.txt  flow.bud  flow.chd  flow.dis  (+12 more)
examples/ex-gwt-moc3d-p01a/mf6gwt/: CMakeLists.txt  mfsim.lst  mfsim.nam  trans.adv  trans.cbc  trans.dsp  trans.fmi  trans.ic  trans.ims  trans.lst  trans.mst  trans.nam  trans.obs  trans.obs.csv  trans.oc  trans.ssm  trans.tdis  trans.ucn
misc/: 0001-update-for-memory-leaks.patch  CMakePresets-Leaks.json  CMakePresets-vtk-9.1.0-qt-5.15.2.json  CMakePresets-vtk-9.1.0.json  CMakePresets.json  SystemTools.cxx.patch  about_disclaimer.ps1  build-vtk-9.1.0-leaks.yml  build-vtk-9.1.0.yml  build.yml  readme_disclaimer.ps1  set_versions.ps1  update-about-dialog-build-date.ps1  update-about-dialog-version.ps1  vtk-6.3.0-vs2017-x64.ipynb  vtk-9.1.0-vs2019-x64.ipynb
mv/: CMakeLists.txt  Modflow6DataSource.cpp  Modflow6DataSource.h  ModpathReader.cpp  ModpathReader.h  mv.sln  mv.vcxproj  mv.vcxproj.filters  mvAxes.cpp  mvAxes.h  mvBoundingBox.cpp  mvBoundingBox.h  mvClipBox.cpp  mvClipBox.h  mvColorBar.cpp  mvColorBar.h  mvColorTable.cpp  mvColorTable.h  mvCustomAppendPolyData.cpp  mvCustomAppendPolyData.h  mvDataSource.cpp  mvDataSource.h  mvDefine.h  mvDisplayObject.cpp  mvDisplayObject.h  mvDisplayText.cpp  mvDisplayText.h  mvDxfReader.cpp  mvDxfReader.h  mvGUISettings.cpp  mvGUISettings.h  mvGridLayer.cpp  mvGridLayer.h  mvGridLines.cpp  mvGridLines.h  mvGridShell.cpp  mvGridShell.h  mvHashTable.cpp  mvHashTable.h  mvHeader.h  (+18 more)
mv/win32/: mvSaveCurrentDirectory.cpp  mvSaveCurrentDirectory.h
rtd/source/: cellindex.rst  conf.py  data.rst  exporting.rst  index.rst  intro.rst  toolboxes.rst  viewcontrol.rst  zoom.rst
